[package]
name = "mem-isolate"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "1.3.3"
libc = "0.2.170"
serde = { version = "1.0.218", features = ["derive"] }
thiserror = "2.0.11"

[dev-dependencies]
criterion = "0.5.1"
rand = "0.9.0"

[[bench]]
name = "benchmarks"
harness = false

# This enables examples to be treated as tests when running cargo test
[[example]]
name = "error-handling-basic"
test = true

[[example]]
name = "error-handling-complete"
test = true
