[package]
name = "mem-isolate"
version = "0.1.0"
description = "Run unsafe code safely"
edition = "2024"
authors = ["Brannon Dorsey <brannon@brannondorsey.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/brannondorsey/mem-isolate"
keywords = ["memory", "isolation", "sandbox", "unix"]
categories = ["memory-management", "os::unix-apis", "rust-patterns"]
exclude = [
    ".github/*",
]

[dependencies]
bincode = "1.3.3"
libc = "0.2.170"
serde = { version = "1.0.218", features = ["derive"] }
thiserror = "2.0.11"

[dev-dependencies]
criterion = "0.5.1"
rand = "0.9.0"
tempfile = "3.18.0"

[[bench]]
name = "benchmarks"
harness = false

# This enables examples to be treated as tests when running cargo test
[[example]]
name = "error-handling-basic"
test = true

[[example]]
name = "error-handling-complete"
test = true
